create CardValue and Seed in Cards and MoveValidator in rules